welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:38: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="X"){
                    ^